--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>about</title>
-    <link rel="stylesheet" href="css/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="stylehub.css">
 </head>
 <body>
@@ -126,7 +126,7 @@
                         </div>
                         <div class="four col-md-3">
                                 <h5>let's place your event</h5>
-                                <a href="contact.html" button class="btn btn-half">SEND US A MESSAGE</button>
+                                <a href="contact.html"class="btn btn-half">SEND US A MESSAGE</a>
                                 <P class="align-center">Or call: 08037217966</P>
                                 <span class="my-2 my-lg-0 media-space">
                                     <i class="fa fa-facebook fa-2x"></i>
@@ -139,6 +139,10 @@
     <h6 class="section-h">COPYRIGHT &copy; GREL CATERING AND EVENTS 2018 ALL RIGHT RESERVED.</h6>
 
 </section>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="./js/bootstrap.min.js"></script>
 
         
         
