--- a/event.html
+++ b/event.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>#events</title>
-    <link rel="stylesheet" href="css/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="stylehub.css">
     
 </head>
@@ -72,40 +72,37 @@
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="d-block m-auto slide-img" src="image/jambolayar.jpg" alt="First slide">
+                                <img class="d-block m-auto slide-img" src="image/grel4.jpg" alt="First slide" width="100%">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block m-auto slide-img" src="image/jollof.R.jpg" alt="Second slide">
+                                <img class="d-block m-auto slide-img" src="image/jollof.R.jpg" alt="Second slide" width="80%">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block m-auto slide-img"  src="image/pepperr.jpg" alt="Third slide">
+                                <img class="d-block m-auto slide-img"  src="image/grel2.jpg" alt="Third slide" width="100%">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block m-auto slide-img" src="image/friedb.jpg" alt="fourth slide">
+                                <img class="d-block m-auto slide-img" src="image/grel6.jpg" alt="fourth slide" width="100%">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block m-auto slide-img" src="image/singap.jpg" alt="fifth slide">
+                                <img class="d-block m-auto slide-img" src="image/singap.jpg" alt="fifth slide" width="80%">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block m-auto slide-img" src="image/shredb.jpg" alt="sixth slide">
+                                <img class="d-block m-auto slide-img" src="image/grel8.jpg" alt="sixth slide" width="100%">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block m-auto slide-img" src="image/yamp.jpg" alt="seventh slide">
+                                <img class="d-block m-auto slide-img" src="image/grel5.jpg" alt="seventh slide" width="100%">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block m-auto slide-img" src="image/beafs.jpg" alt="eighth slide">
+                                <img class="d-block m-auto slide-img" src="image/grel7.jpg" alt="eighth slide" width="100%">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block m-auto slide-img" src="image/efo.jpg" alt="eighth slide">
+                                <img class="d-block m-auto slide-img" src="image/efo.jpg" alt="eighth slide" width="80%">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block m-auto slide-img" src="image/des7.jpg" alt="eighth slide">
+                                <img class="d-block m-auto slide-img" src="image/grel3.jpg" alt="eighth slide" width="100%">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block m-auto slide-img" src="image/des6.jpg" alt="eighth slide">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block m-auto slide-img" src="image/des6.jpg" alt="eighth slide">
+                                <img class="d-block m-auto slide-img" src="image/des6.jpg" alt="eighth slide" width="80%">
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -159,7 +156,7 @@
                     </div>
                         <div class="four col-md-3">
                             <h5>let's place your event</h5>
-                            <a href="contact.html" button class="btn btn-half">SEND US A MESSAGE</button>
+                            <a href="contact.html"class="btn btn-half">SEND US A MESSAGE</a>
                             <P class="align-center">Or call: 08037217966</P>
                             <span class="my-2 my-lg-0 media-space">
                                 <i class="fa fa-facebook fa-2x"></i>
