--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>foodhub</title>
-    <link rel="stylesheet" href="css/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="stylehub.css">
 
 </head>
@@ -164,13 +164,15 @@
                     </div>
                     <div class="four col-md-3">
                         <h5>let's place your event</h5>
-                            <a href="contact.html" button class="btn btn-half">SEND US A MESSAGE</button>
-                                <P class="align-center">Or call: 08037217966</P>
-                                    <span class="my-2 my-lg-0 media-space">
-                                        <i class="fa fa-facebook fa-2x"></i>
-                                        <span class="fa fa-twitter fa-2x"></span>
-                                        <span class="fa fa-instagram fa-2x"></span>
-                                    </span>  
+                            <a href="contact.html" class="btn btn-half">
+                                SEND US A MESSAGE
+                            </a>
+                            <P class="align-center">Or call: 08037217966</P>
+                            <span class="my-2 my-lg-0 media-space">
+                                <i class="fa fa-facebook fa-2x"></i>
+                                <span class="fa fa-twitter fa-2x"></span>
+                                <span class="fa fa-instagram fa-2x"></span>
+                            </span>  
                     </div>
                             
                 </div>
