--- a/index.html
+++ b/index.html
@@ -14,16 +14,38 @@
     <!--header slider-->
     <header>
         <div class="row">
+            <nav class="navbar">
+                <span class="open-slide">
+                    <a href="#" onclick="openSlideMenu()">
+                        <svg width="30" height="30">
+                            <path d ="M0,5 30,5" stroke="#fff"
+                            stroke-width="5"/>
+                            <path d ="M0,14 30,14" stroke="#fff"
+                            stroke-width="5"/>
+                            <path d ="M0,23 30,23" stroke="#fff"
+                            stroke-width="5"/>
+                        </svg>
+                   </a>
+                </span>
             <ul class="main-nav">
-                <button class="main-nav-toggle hidden sm-up"type="button" data-toggle="collapse" data-target="#copllapsmain-nav">  
-                </button>
-                <div class="collapse main-nav toggleable-xs"id="Collapsemain-nav"></div>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="event.html">Our Event</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
+        
+            <div id="side-menu" class="side-nav">
+                <a href ="#" class= "btn-close" 
+                onclick="closeSlideMenu()">&times;</a>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="event.html">Our Event</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact</a></li>
+
+            </div>
+            </nav>
         </div>
         <div class="title"> 
             <h1>GREL EVENT PLUS <br> WE CREATE YOU CELEBRATE</h1>
@@ -186,6 +208,23 @@
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="js/bootstrap.min.js"></script>    
+  <script src="js/bootstrap.min.js"></script> 
+  <script>
+      function openSlideMenu(){
+          document.getElementById('side-menu').style.width
+          = '200px';
+          document.getElementById('title').style.marginLeft
+          = '350px';
+
+      }
+      function closeSlideMenu(){
+          document.getElementById('side-menu').style.width
+          = '0';
+          document.getElementById('title').style.marginLeft
+          = '0';
+
+      }
+      
+  </script>   
 </body>
 </html>
