--- a/event.html
+++ b/event.html
@@ -128,7 +128,7 @@
                                 <img class="d-block m-auto slide-img" src="image/grel3.jpg" alt="eighth slide" width="100%">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block m-auto slide-img" src="image/des6.jpg" alt="eighth slide" width="80%">
+                                <img class="d-block m-auto slide-img" src="image/grilled f.png alt="eighth slide" width="80%">
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
