--- a/about.html
+++ b/about.html
@@ -99,10 +99,10 @@
                         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img class="d-block m-auto slide-img" src="image/design1.png" alt="First slide"style="width:500px">
+                                        <img class="d-block m-auto slide-img" src="image/design1.png" alt="First slide"style="width:80%">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block m-auto slide-img" src="image/des7.jpg" alt="Second slide" style="width:500px">
+                                        <img class="d-block m-auto slide-img" src="image/des7.jpg" alt="Second slide" style="width:70%">
                                     </div>
                                     <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
                                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
