--- a/index.html
+++ b/index.html
@@ -58,14 +58,15 @@
         <!--section A-->
         <section id="section A" class="box">
             <div class="content-wrap"></div>
-            <h2 class="content-title">About Us</h2>
+            <h2 class="content-title ">About Us</h2>
             <div class="content">
-                    Grand Regale Event Limited, a one stop event management company based in lagos and Abuja 
+                    Grand Regale Event Limited, a one stop event management company based in lagos and Abuja, 
                     specialized in all kinds of catering and events from social gatherings, corporate events, concerts, seminars to exhibitions.
                     Our creative mind and Attention to details has endeared us to be one of the industries best.
                     in an ever changing, fast-paced world, sucess is determined by good choices of lasting effects and 
                     communication is essential. At Grel we strive to be the best choice of clients by helping to ease their event planning burden, through consistent, unpredictable 
-                    proffesionalism there by providing a worry and hassle-free event at a reasonable price.</div>
+                    proffesionalism there by providing a worry and hassle-free event at a reasonable price.
+                <br>
                 <br>
                 <a href="about.html" class="btn btn-full">More Details</a>
             </div>
@@ -109,7 +110,7 @@
             <div class="content-wrap"></div>
               <div class="content-t marg">let's plan<br>YOUR EVENT</div>
                     <button class="but btn btn-wedding"> WEDDING</button>
-                    <button class="but btn btn-coperate"> COPERATE</button>
+                    <button class="but btn btn-coperate"> COOPERATE</button>
                     <button class="but btn btn-office Meals">OFFICE MEAL</button>
                     <button class="but btn btn-home delivery">HOME DELIVERY</button>
                     <button class="but btn btn-ceremony">FESTIVAL</button>
@@ -127,7 +128,7 @@
             <!--section-fx-->
         <section id="section-fx" class="box-fx">
             <div class="content-wrap">
-                <button class="btn-content-wed"> Weddings</button>
+                <div class="content-wed"> Weddings</div>
                     <h3> weddings are always beautiful memory to last for a life time</h3>
                         <div class="row">
                             <div class="col-md-6">
@@ -152,7 +153,7 @@
             <!--section-g-->
         <section id="section eventf" class="box-g">
             <div class="content-wrap"></div>
-                <div class="row">
+                <div class="row fot">
                     <div class="col-md-3">
                         <h5 class="#about.html"><b>About</b></h5>
                             <p> Grand Regale Event Limited, a one stop event management company based in lagos and Abuja 
@@ -177,7 +178,7 @@
                 
                     <div class="col-md-3">
                         <h2 class="#contact.html"><b>Find Us</b></h2>
-                            <p>21 Chris Maduike Lekki Phase1 Lagos.<br>
+                            <p class="address">21 Chris Maduike Lekki Phase1 Lagos.<br>
                                 22, Julius Nyeyere Crescent Abuja.<br>
                                 +234 8037217966<br>
                                 hsani@grelevents.com
